--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "ng-pages -d build",
+    "predeploy": "yarn run build && 'clikventas.com > ./build/CNAME' ",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
